# brdf_visualizer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  brdfviz.sln  brdfviz.vcxproj  brdfviz.vcxproj.filters  build.sh  buildReleaseOnly.sh  cleanup.sh  copydata.sh  imgui.ini  samplingViz.py
Shaders/Default/: FragmentShader.glsl  VertexShader.glsl
Shaders/Normal/: FragmentShader.glsl  VertexShader.glsl
Shaders/PBR/: FragmentShader.glsl
Shaders/PBR2/: FragmentShader.glsl
Shaders/Phong/: FragmentShader.glsl  VertexShader.glsl
Shaders/Shadow/: FragmentShader.glsl  VertexShader.glsl
Shaders/Triplanar/: FragmentShader.glsl  VertexShader.glsl
Shaders/brdf/: FragmentShader.glsl  VertexShader.glsl
cmake/: PVS-Studio.cmake  assimp.cmake  doxygen.cmake  embree.cmake  glad.cmake  glfw3.cmake  glm.cmake  imgui.cmake  spdlog.cmake
data/: teapot2.mtl
lib/msvc/assimp/x64/lib/: IrrXML.lib  assimp-vc142-mt.lib  zlibstatic.lib
lib/msvc/glad/include/glad/: glad.h
lib/msvc/glad/src/: glad.c
license/: glm.license
src/: CMakeLists.txt
src/brdfviz/: CMakeLists.txt  benchmark.cpp  gui.cpp  gui.h  main.cpp  pch.h
src/brdfviz/common/: sampler.cpp  sampler.h
src/brdfviz/common/utils/: assimploading.cpp  assimploading.h  coordsystem.cpp  coordsystem.h  math.h  rgb.cpp  rgb.h  rng.cpp  rng.h  texutils.cpp  texutils.h  timer.cpp  timer.h  utils.h
src/brdfviz/embree/: embreerenderer.cpp  embreerenderer.h  mathscene.cpp  mathscene.h  pathtracerhelper.cpp  pathtracerhelper.h  rtcamera.cpp  rtcamera.h  rtccommonshader.cpp  rtccommonshader.h  rtcrayhitior.h  rtcshader.cpp  rtcshader.h  rtcshadingtype.h  rtlight.cpp  rtlight.h  rtsphericalmap.cpp  rtsphericalmap.h  sphere.cpp  sphere.h
src/brdfviz/gl/: camera.cpp  camera.h  camerainfo.h  cameratransformation.cpp  cameratransformation.h  color.h  framebufferobject.cpp  framebufferobject.h  icospherevertexbufferobject.cpp  icospherevertexbufferobject.h  light.cpp  light.h  lightinfo.h  linevertexbufferobject.cpp  linevertexbufferobject.h  material.cpp  material.h  object.cpp  object.h  objecttransformation.cpp  objecttransformation.h  openglrenderer.cpp  openglrenderer.h  openglscene.cpp  openglscene.h  renderer.cpp  renderer.h  samplervisualizerobject.cpp  samplervisualizerobject.h  shader.cpp  shader.h  shaderloader.cpp  shaderloader.h  texture.cpp  texture.h  texturetype.h  transformation.cpp  transformation.h  uniformlocationpair.h  uniformlocations.h  (+3 more)
src/brdfviz/gl/shaders/: brdfshader.cpp  brdfshader.h  diffuseshader.cpp  diffuseshader.h  normalshader.cpp  normalshader.h
src/brdfviz/gl/vbos/: cube.h  gizmo.h  halficosahedron.h  icosahedron.h  plane.h
src/libbrdf/: CMakeLists.txt  timer.cpp
